--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:19:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:19:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
-      <td class="greyout leftborder">Russell Henley +3
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Russell Henley +3
 +2 thru 8</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -230,10 +230,10 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -264,8 +264,8 @@ Not started</td>
 -2 thru 3</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -294,10 +294,10 @@ Not started</td>
 E thru 3</td>
       <td>Matthew Fitzpatrick E
 +1 thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -376,8 +376,8 @@ E thru 3</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -396,6 +396,22 @@ E thru 1</td>
 +1 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Louis Oosthuizen +4
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -404,12 +420,12 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout">Billy Horschel +4
-+2 thru 3</td>
+      <td class="greyout">Billy Horschel +5
++3 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -440,8 +456,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -452,28 +468,12 @@ E thru 3</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka(W) +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Adam Scott +2
+      <td class="greyout">Adam Scott +2
 Not started</td>
-      <td class="greyout">Brooks Koepka(W) +3
-E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -484,10 +484,10 @@ Not started</td>
 E thru 3</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -500,10 +500,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 3</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Sam Burns +5
 +2 thru 4</td>
     </tr>
@@ -534,8 +534,8 @@ Not started</td>
 +1 thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -630,8 +630,8 @@ Not started</td>
 -2 thru 3</td>
       <td>Rory McIlroy +1
 E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -646,8 +646,8 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -664,8 +664,8 @@ E thru 3</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -678,8 +678,8 @@ E thru 3</td>
 -2 thru 3</td>
       <td>Jordan Spieth(W) +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Sam Burns +5
 +2 thru 4</td>
     </tr>
@@ -742,8 +742,8 @@ E thru 3</td>
 Not started</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -776,8 +776,8 @@ Not started</td>
 -1 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -820,10 +820,10 @@ Not started</td>
 E thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -870,8 +870,8 @@ E thru 3</td>
 Not started</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -892,6 +892,22 @@ E thru 2</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -3
@@ -902,10 +918,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -918,26 +934,10 @@ Not started</td>
 E thru 1</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 2</td>
-      <td>Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -964,10 +964,10 @@ E thru 3</td>
 -1 thru 4</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -982,8 +982,8 @@ Not started</td>
 -1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -996,10 +996,10 @@ E thru 3</td>
 -2 thru 3</td>
       <td>Rory McIlroy +1
 E thru 1</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1030,10 +1030,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Viktor Hovland(W) +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Patrick Reed +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Patrick Reed +2
 E thru 7</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -1060,10 +1060,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
-      <td>Xander Schauffele +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -1085,15 +1085,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Jon Rahm(W) E
 -2 thru 3</td>
       <td>Viktor Hovland +2
 +2 thru 2</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
       <td>Xander Schauffele +2
 E thru 2</td>
-      <td>Brooks Koepka +3
-E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
       <td class="greyout">Justin Thomas +4
