--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:19:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:19:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ E thru 3</td>
 -1 thru 4</td>
       <td>Viktor Hovland(W) +2
 +2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -214,10 +214,10 @@ E thru 3</td>
 -1 thru 4</td>
       <td>Rory McIlroy +1
 E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -230,8 +230,8 @@ Not started</td>
 +1 thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -248,8 +248,8 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -262,8 +262,8 @@ Not started</td>
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -312,8 +312,8 @@ E thru 3</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -344,8 +344,8 @@ Not started</td>
 -1 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -388,10 +388,10 @@ Not started</td>
 -1 thru 4</td>
       <td>Viktor Hovland(W) +2
 +2 thru 2</td>
-      <td>Patrick Reed +2
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Patrick Reed +2
 E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
       <td class="greyout">Luke List +5
 Not started</td>
     </tr>
