--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:21:25 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:22:08 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -388,10 +388,10 @@ Not started</td>
 -1 thru 8</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
-      <td>Jon Rahm E
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm E
 -2 thru 3</td>
-      <td class="greyout leftborder">Rory McIlroy +1
-E thru 1</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 9</td>
     </tr>
@@ -476,6 +476,22 @@ Not started</td>
 -1 thru 2</td>
     </tr>
     <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Dustin Johnson -4
+-1 thru 4</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Rory McIlroy(W) E
+-1 thru 2</td>
+      <td>Jon Rahm E
+-2 thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 2</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -492,22 +508,6 @@ E thru 2</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -4
--1 thru 4</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Rory McIlroy(W) +1
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -522,6 +522,22 @@ Not started</td>
 E thru 2</td>
       <td class="greyout">Sam Burns +5
 +2 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +2
+E thru 2</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -556,6 +572,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Jon Rahm E
+-2 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
@@ -570,6 +602,22 @@ E thru 3</td>
 +2 thru 2</td>
       <td class="greyout">Brooks Koepka +2
 -1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Rory McIlroy(W) E
+-1 thru 2</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 2</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -604,22 +652,6 @@ Not started</td>
 +1 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +2
-E thru 2</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -636,20 +668,20 @@ E thru 2</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td>Cameron Smith -4
 Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Bubba Watson E
+-1 thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -700,36 +732,36 @@ E thru 3</td>
 +2 thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Rory McIlroy(W) +1
-E thru 1</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Tiger Woods(W) -1
 Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
-      <td>Bubba Watson E
--1 thru 6</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout">Viktor Hovland +2
+      <td>Collin Morikawa E
+-1 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 2</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -780,22 +812,6 @@ Not started</td>
 -1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -828,18 +844,18 @@ E thru 2</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-2</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Jon Rahm(W) E
+-2 thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -876,20 +892,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners -3
--1 thru 8</td>
+      <td>Scottie Scheffler -3
+Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 3</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Jordan Spieth +1
+      <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Viktor Hovland +2
++2 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 2</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -924,20 +940,20 @@ Not started</td>
 E thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
+      <td>Patrick Cantlay(W) -2
+E thru 3</td>
+      <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td>Jon Rahm E
+-2 thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 2</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -972,6 +988,22 @@ E thru 2</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +6
++3 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">1</td>
       <td>Will Zalatoris -2
@@ -988,36 +1020,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay(W) -2
-E thru 3</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 2</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Benjac</td>
       <td class="bigbold">2</td>
-      <td>Tiger Woods -1
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Collin Morikawa(W) E
--1 thru 4</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 2</td>
+      <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 9</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 4</td>
+      <td class="greyout">Justin Rose +6
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1034,22 +1050,6 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout">Patrick Reed +2
 E thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Xander Schauffele +2
-E thru 2</td>
-      <td>Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 4</td>
-      <td class="greyout">Justin Rose +6
-+2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
