--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:21:25 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:22:08 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,6 +188,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Collin Morikawa E
+-1 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
+E thru 2</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-5</td>
       <td>Sungjae Im -5
@@ -204,20 +220,20 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +2
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 2</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -281,22 +297,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
